# enterprise-ai-harness

./: .gitignore  README.md
diagrams/: enterprise-ai-harness-architecture.xcf
docs/articles/: Enterprise AI Harness.X.md  Enterprise AI Harness.canonical.md  Enterprise AI Harness.habr.md  Enterprise AI Harness.linkedin.md  Enterprise AI Harness.medium.md  Reference Implementation on Kind - Three Layers, Borders Without Identity.habr.md  Toward a Four-Layer Architecture for Self-Hosted Enterprise AI Harnesses.md
isolation/: .env.example  DEPLOYMENT.md  Makefile  README.md  pyproject.toml
isolation/channels/tg-bot/: Dockerfile  pyproject.toml
isolation/channels/tg-bot/tg_bot/: a2a_client.py  handlers.py  main.py
isolation/helm/charts/platform/: Chart.yaml  values-dev.yaml  values.yaml
isolation/helm/charts/platform/templates/: _helpers.tpl  gotrue-deployment.yaml  gotrue-secret.yaml  gotrue-service.yaml  postgres-deployment.yaml  postgres-secret.yaml  (+2 more)
isolation/helm/charts/shared-tools/: Chart.yaml  values.yaml
isolation/helm/charts/tenant/: Chart.yaml  values.yaml
isolation/scripts/: bootstrap-data.sh  build-tools.sh  kind-config.yaml  setup-kind.sh
isolation/scripts/admin/: check_migrations.py  db.py  status.py  tenant.py  user.py
isolation/scripts/cluster/: 01_kind.sh  03_platform.sh  04_migrations.sh  05_kagent.sh  07_tools.sh  common.sh
isolation/supabase/migrations/: 0001_init_platform.sql  0002_audit_log.sql  0003_usage_daily.sql  0004_orders_schema.sql  0005_rls_policies.sql  0006_kagent_db.sql  0007_orgs.sql  0008_fk_tenant_scoped.sql
isolation/tests/e2e/: conftest.py  test_agent_routing.py  test_memory_multi_turn.py  test_parallel_execution.py  test_ping_tool.py
isolation/tools/order-tracker/: Dockerfile  pyproject.toml
isolation/tools/order-tracker/order_tracker/: __init__.py  server.py
isolation/tools/ping-tool/: Dockerfile  pyproject.toml
isolation/tools/ping-tool/ping_tool/: server.py
isolation/tools/tenant-info-tool/: Dockerfile  pyproject.toml
isolation/tools/tenant-info-tool/tenant_info_tool/: server.py
(+14 files in other folders)
