[build-system]
requires = ["setuptools>=71"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot channel for SaaS agent platform (aiogram3 polling)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.0",
    "asyncpg>=0.29.0",
    "saas-common",
]

[tool.uv.sources]
saas-common = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_bot*"]
