[project]
name = "order-tracker"
version = "0.1.0"
description = "Per-tenant MCP tool: CRM leads + order lifecycle tracking"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.0",
    "asyncpg>=0.29.0",
    "saas-common",
]

[project.scripts]
order-tracker = "order_tracker.server:main"

[tool.uv.sources]
saas-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
